--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Jaben</string>
     <string name="log_with_phone_number">Login with phone number</string>
     <string name="title_activity_maps_driver">Map</string>
+    <string name="phone">Phone</string>
+    <string name="login">Login</string>
 </resources>
